--- a/tasks/dns/nsupdate.main.dns.yml
+++ b/tasks/dns/nsupdate.main.dns.yml
@@ -1,3 +1,18 @@
+- name: "{{ inner_service_title }} - validate namespace"
+  fail:
+    msg: "namespace not specified (expected: 'ext_dns')"
+  when: inner_service_namespace == ''
+  tags: ["no_print"]
+
+- name: "{{ inner_service_title }} - validate namespace"
+  fail:
+    msg: |
+      incorrect namespace
+      expected: 'ext_dns'
+      received: '{{ inner_service_namespace }}'
+  when: inner_service_namespace != 'ext_dns'
+  tags: ["no_print"]
+
 - name: "{{ inner_service_title | default('') }} - dns - nsupdate"
   set_fact:
     ext_dns_title: "{{ inner_service_title }} - dns - nsupdate"
