--- a/test/services/bottom.yml
+++ b/test/services/bottom.yml
@@ -1,3 +1,18 @@
+- name: "{{ inner_service_title }} - validate namespace"
+  fail:
+    msg: "namespace not specified (expected: 'ext_test_bottom')"
+  when: inner_service_namespace == ''
+  tags: ["no_print"]
+
+- name: "{{ inner_service_title }} - validate namespace"
+  fail:
+    msg: |
+      incorrect namespace
+      expected: 'ext_test_bottom'
+      received: '{{ inner_service_namespace }}'
+  when: inner_service_namespace != 'ext_test_bottom'
+  tags: ["no_print"]
+
 - name: "{{ inner_service_title }} - print (test) - bottom - vars"
   set_fact:
     ext_test_bottom_title: "{{ inner_service_title }} - bottom"
