--- a/tasks/dns/godaddy.main.dns.yml
+++ b/tasks/dns/godaddy.main.dns.yml
@@ -1,10 +1,12 @@
-- name: "{{ inner_service_title }} - validate namespace"
+# Prepare
+
+- name: "{{ inner_service_title }} - validate namespace (required)"
   fail:
     msg: "namespace not specified (expected: 'ext_dns')"
   when: inner_service_namespace == ''
   tags: ["no_print"]
 
-- name: "{{ inner_service_title }} - validate namespace"
+- name: "{{ inner_service_title }} - validate namespace (ext_dns)"
   fail:
     msg: |
       incorrect namespace
@@ -13,37 +15,42 @@
   when: inner_service_namespace != 'ext_dns'
   tags: ["no_print"]
 
-- name: "{{ inner_service_title | default('') }} - dns - godaddy"
+- name: "{{ inner_service_title }} - dns - godaddy - vars"
   set_fact:
     ext_dns_title: "{{ inner_service_title }} - dns - godaddy"
     ext_dns_params: "{{ inner_service_params }}"
-    ext_dns_credentials: >-
-      {{
-        inner_service_credentials[
-          inner_service_params.credential_name | default('dns', true)
-        ] | default({})
-      }}
+    ext_dns_credentials: "{{ inner_service_credentials }}"
     ext_dns_state: "{{ inner_service_state }}"
+    ext_dns_tmp_dir: "{{ inner_service_tmp_dir }}"
+    ext_dns_result: {}
   tags: ["no_print"]
 
-- name: "{{ ext_dns_title }} - vars"
+# Main
+
+- name: "{{ ext_dns_title }} - inner vars"
   set_fact:
     ext_dns_zone: "{{ ext_dns_params.zone }}"
     ext_dns_record_type: "{{ ext_dns_params.dns_type }}"
     ext_dns_record: "{{ ext_dns_params.record }}"
     ext_dns_data_list: "{{ ext_dns_params.data_list }}"
+    ext_dns_main_credentials: >-
+      {{
+        inner_service_credentials[
+          inner_service_params.credential_name | default('dns', true)
+        ] | default({})
+      }}
   tags: ["no_print"]
 
 - name: "{{ ext_dns_title }} - godaddy dns"
   set_fact:
     ext_dns_api_server_url: >-
-      {{ ext_dns_credentials.api_server }}/{{ ''
-      }}v{{ ext_dns_credentials.api_version }}/domains{{ ''
+      {{ ext_dns_main_credentials.api_server }}/{{ ''
+      }}v{{ ext_dns_main_credentials.api_version }}/domains{{ ''
       }}/{{ ext_dns_params.zone }}/records{{ ''
       }}/{{ ext_dns_record_type }}{{ ''
       }}/{{ ext_dns_record }}
     ext_dns_authorization: >-
-      sso-key {{ ext_dns_credentials.api_key }}:{{ ext_dns_credentials.api_secret }}
+      sso-key {{ ext_dns_main_credentials.api_key }}:{{ ext_dns_main_credentials.api_secret }}
     ext_dns_final_state: "{{ ext_dns_state }}"
     ext_dns_records: []
     ext_dns_execute: true
@@ -150,3 +157,10 @@
   changed_when: ext_dns_execute | bool
   when: ext_dns_execute | bool
   tags: ["no_print_skipped"]
+
+# Set Result
+
+- name: "{{ ext_dns_title }} - set result"
+  set_fact:
+    cloud_service_result: "{{ ext_dns_result }}"
+  tags: ["no_print"]
