--- a/tasks/s3/aws.main.s3.yml
+++ b/tasks/s3/aws.main.s3.yml
@@ -1,10 +1,12 @@
-- name: "{{ inner_service_title }} - validate namespace"
+# Prepare
+
+- name: "{{ inner_service_title }} - validate namespace (required)"
   fail:
     msg: "namespace not specified (expected: 'ext_s3')"
   when: inner_service_namespace == ''
   tags: ["no_print"]
 
-- name: "{{ inner_service_title }} - validate namespace"
+- name: "{{ inner_service_title }} - validate namespace (ext_s3)"
   fail:
     msg: |
       incorrect namespace
@@ -13,29 +15,41 @@
   when: inner_service_namespace != 'ext_s3'
   tags: ["no_print"]
 
-- name: "{{ inner_service_title | default('') }} - s3 - aws (cli)"
+- name: "{{ inner_service_title }} - s3 - vars"
   set_fact:
-    ext_s3_title: "{{ inner_service_title }} - s3 - aws (cli)"
+    ext_s3_title: "{{ inner_service_title }} - s3"
     ext_s3_params: "{{ inner_service_params }}"
-    ext_s3_credentials: >-
-      {{
-        inner_service_credentials[
-          inner_service_params.credential_name | default('s3', true)
-        ] | default({})
-      }}
+    ext_s3_credentials: "{{ inner_service_credentials }}"
     ext_s3_state: "{{ inner_service_state }}"
+    ext_s3_tmp_dir: "{{ inner_service_tmp_dir }}"
+    ext_s3_result: {}
   tags: ["no_print"]
 
-- name: "{{ ext_s3_title }} - ext_s3_mode"
+# Main
+
+- name: "{{ ext_s3_title }} - s3 - aws (cli)"
   set_fact:
     ext_s3_mode: "{{ (ext_s3_state != 'absent') | ternary('create', 'delete') }}"
+    ext_s3_main_credentials: >-
+      {{
+        ext_s3_credentials[
+          ext_s3_params.credential_name | default('s3', true)
+        ] | default({})
+      }}
   tags: ["no_print"]
 
 - name: "{{ ext_s3_title }} - {{ ext_s3_mode }} the bucket ({{ ext_s3_params.bucket }})"
   aws_s3:
-    s3_url: "{{ ext_s3_credentials.endpoint | default(omit, true) }}"
-    access_key: "{{ ext_s3_credentials.access_key }}"
-    secret_key: "{{ ext_s3_credentials.secret_key }}"
+    s3_url: "{{ ext_s3_main_credentials.endpoint | default(omit, true) }}"
+    access_key: "{{ ext_s3_main_credentials.access_key }}"
+    secret_key: "{{ ext_s3_main_credentials.secret_key }}"
     bucket: "{{ ext_s3_params.bucket }}"
-    permission: "{{ ext_s3_params.permission | default('private') }}"
+    permission: "{{ ext_s3_params.permission | default('private', true) }}"
     mode: "{{ ext_s3_mode }}"
+
+# Set Result
+
+- name: "{{ ext_s3_title }} - set result"
+  set_fact:
+    cloud_service_result: "{{ ext_s3_result }}"
+  tags: ["no_print"]
