--- a/tasks/vpn/digital_ocean.main.vpn.yml
+++ b/tasks/vpn/digital_ocean.main.vpn.yml
@@ -1,3 +1,39 @@
-- name: "{{ cloud_service_title | default('') }} - vpn - digital ocean (outer)"
+# Prepare
+
+- name: "{{ inner_service_title }} - validate namespace (required)"
+  fail:
+    msg: "namespace not specified (expected: 'ext_vpn')"
+  when: inner_service_namespace == ''
+  tags: ["no_print"]
+
+- name: "{{ inner_service_title }} - validate namespace (ext_vpn)"
+  fail:
+    msg: |
+      incorrect namespace
+      expected: 'ext_vpn'
+      received: '{{ inner_service_namespace }}'
+  when: inner_service_namespace != 'ext_vpn'
+  tags: ["no_print"]
+
+- name: "{{ inner_service_title }} - vpn - digital ocean - vars"
+  set_fact:
+    ext_vpn_title: "{{ inner_service_title }} - vpn - digital ocean"
+    ext_vpn_params: "{{ inner_service_params }}"
+    ext_vpn_credentials: "{{ inner_service_credentials }}"
+    ext_vpn_state: "{{ inner_service_state }}"
+    ext_vpn_tmp_dir: "{{ inner_service_tmp_dir }}"
+    ext_vpn_result: {}
+  tags: ["no_print"]
+
+# Main
+
+- name: "{{ ext_vpn_title }} (outer)"
   include_role:
     name: "{{ cloud_service_base_dir_prefix }}roles/digital_ocean_vpn"
+
+# Set Result
+
+- name: "{{ ext_vpn_title }} - set result"
+  set_fact:
+    cloud_service_result: "{{ ext_vpn_result }}"
+  tags: ["no_print"]
