--- a/tasks/node/digital_ocean.main.node.yml
+++ b/tasks/node/digital_ocean.main.node.yml
@@ -1,71 +1,109 @@
-- set_fact: 
-    cloud_node_item_name: "{{ cloud_node_item.name | replace('_', '-') }}"
+# Prepare
+
+- name: "{{ inner_service_title }} - validate namespace (required)"
+  fail:
+    msg: "namespace not specified (expected: 'ext_node')"
+  when: inner_service_namespace == ''
+  tags: ["no_print"]
+
+- name: "{{ inner_service_title }} - validate namespace (ext_node)"
+  fail:
+    msg: |
+      incorrect namespace
+      expected: 'ext_node'
+      received: '{{ inner_service_namespace }}'
+  when: inner_service_namespace != 'ext_node'
+  tags: ["no_print"]
+
+- name: "{{ inner_service_title }} - node - digital ocean - vars"
+  set_fact:
+    ext_node_title: "{{ inner_service_title }} - node - digital ocean"
+    ext_node_params: "{{ inner_service_params }}"
+    ext_node_credentials: "{{ inner_service_credentials }}"
+    ext_node_state: "{{ inner_service_state }}"
+    ext_node_base_dir_prefix: "{{ cloud_service_base_dir_prefix }}"
+    ext_node_tmp_dir: "{{ inner_service_tmp_dir }}"
+    ext_node_result: {}
+  tags: ["no_print"]
+
+# Main
+
+- name: "{{ ext_node_title }} - main vars"
+  set_fact:
+    ext_node_name: "{{ ext_node_params.name | replace('_', '-') }}"
+    ext_node_main_credentials: >-
+      {{
+        ext_node_credentials[
+          ext_node_params.credential_name | default('node', true)
+        ] | default({})
+      }}
   tags: ["no_print"]
 
 - name: >-
-    {{ cloud_node_inner_title }} -
-    {{ cloud_node_inner_create | bool | ternary('create', 'destroy') }}
-    droplet - {{ cloud_node_item_name }}
+    {{ ext_node_title }} - {{ ext_node_state }}
+    droplet - {{ ext_node_name }}
   digital_ocean_droplet:
     unique_name: yes
-    oauth_token: "{{ cloud_node_inner_api_token }}"
-    name: "{{ cloud_node_item_name }}"
-    state: "{{ cloud_node_inner_create | bool | ternary('present', 'absent') }}"
-    region_id: "{{ cloud_node_item.region_id }}"
-    size_id: "{{ cloud_node_inner_size_id }}"
-    image_id: "{{ cloud_node_inner_image_id }}"
-    wait_timeout: "{{ cloud_node_inner_wait_timeout }}"
+    oauth_token: "{{ ext_node_main_credentials.api_token }}"
+    name: "{{ ext_node_name }}"
+    state: "{{ ext_node_state }}"
+    region_id: "{{ ext_node_params.region_id }}"
+    size_id: "{{ ext_node_params.size_id }}"
+    image_id: "{{ ext_node_params.image_id }}"
+    wait_timeout: "{{ ext_node_params.wait_timeout }}"
     private_networking: "true"
-    ipv6: "{{ cloud_node_inner_ipv6 | default(omit) }}"
-    user_data: "{{ cloud_node_inner_user_data }}"
-  register: cloud_node_inner_details
+    ipv6: "{{ ext_node_params.ipv6 | default(omit, true) }}"
+    user_data: "{{ ext_node_params.user_data | default(omit, true) }}"
+  register: ext_node_details
   tags: ["no_print_skipped"]
 
-- block:
+- name: "{{ ext_node_title }} - block"
+  block:
+    - set_fact:
+        ext_node_droplet: "{{ ext_node_details.data.droplet }}"
+      tags: ["no_print"]
 
-  - set_fact: 
-      cloud_node_inner_droplet: "{{ cloud_node_inner_details.data.droplet }}"
-    tags: ["no_print"]
-  
-  - name: >-
-      {{ cloud_node_inner_title }} - tag the droplet {{ cloud_node_item_name }}
-    digital_ocean_tag:
-      api_token: "{{ cloud_node_inner_api_token }}"
-      resource_id: "{{ cloud_node_inner_droplet.id }}"
-      name: "{{ cloud_node_inner_item }}"
-      state: "present"
-    loop: "{{ cloud_node_inner_params.x_digital_ocean_tags }}"
-    loop_control:
-      loop_var: cloud_node_inner_item
-      label: "{{ cloud_node_item_name }} - {{ cloud_node_inner_item }}"
-    tags: ["no_print_skipped"]
-    
-  - set_fact: 
-      cloud_node_inner_host: 
-        name: "{{ cloud_node_item_name }}"
-        private_ip: >-
-          {{ 
-          (cloud_node_inner_droplet.networks.v4 |
-          selectattr('type', 'equalto', 'private') |
-          map(attribute='ip_address') | list | first | default(''))
-          }}
-        public_ipv4: >-
-          {{ 
-          (cloud_node_inner_droplet.networks.v4 |
-          selectattr('type', 'equalto', 'public') |
-          map(attribute='ip_address') | list | first | default(''))
-          }}
-        public_ipv6: >-
-          {{ 
-          (cloud_node_inner_droplet.networks.v6 |
-          selectattr('type', 'equalto', 'public') |
-          map(attribute='ip_address') | list | first | default(''))
-          }}
-    tags: ["no_print"]
-      
-  - set_fact: 
-      cloud_node_active_hosts: "{{ cloud_node_active_hosts + [cloud_node_inner_host] }}"
-    tags: ["no_print"]
+    - name: >-
+        {{ ext_node_title }} - tag the droplet {{ ext_node_name }}
+      digital_ocean_tag:
+        api_token: "{{ ext_node_main_credentials.api_token }}"
+        resource_id: "{{ ext_node_droplet.id }}"
+        name: "{{ ext_node_item }}"
+        state: "present"
+      loop: "{{ ext_node_params.tags }}"
+      loop_control:
+        loop_var: ext_node_item
+        label: "{{ ext_node_name }} - {{ ext_node_item }}"
+      tags: ["no_print_skipped"]
 
-  when: cloud_node_inner_create | bool
+    - set_fact:
+        ext_node_result:
+          name: "{{ ext_node_name }}"
+          private_ip: >-
+            {{
+              ext_node_droplet.networks.v4
+              | selectattr('type', 'equalto', 'private')
+              | map(attribute='ip_address') | list | first | default('')
+            }}
+          public_ipv4: >-
+            {{
+              ext_node_droplet.networks.v4
+              | selectattr('type', 'equalto', 'public')
+              | map(attribute='ip_address') | list | first | default('')
+            }}
+          public_ipv6: >-
+            {{
+              ext_node_droplet.networks.v6
+              | selectattr('type', 'equalto', 'public')
+              | map(attribute='ip_address') | list | first | default('')
+            }}
+      tags: ["no_print"]
+  when: ext_node_state == 'present'
   tags: ["no_print_skipped"]
+
+# Set Result
+
+- name: "{{ ext_node_title }} - set result"
+  set_fact:
+    cloud_service_result: "{{ ext_node_result }}"
+  tags: ["no_print"]
