--- a/test/services/layer/bottom.yml
+++ b/test/services/layer/bottom.yml
@@ -21,6 +21,7 @@
     ext_test_bottom_params: "{{ inner_service_params }}"
     ext_test_bottom_credentials: "{{ inner_service_credentials }}"
     ext_test_bottom_state: "{{ inner_service_state }}"
+    ext_test_bottom_base_dir_prefix: "{{ cloud_service_base_dir_prefix }}"
     ext_test_bottom_tmp_dir: "{{ inner_service_tmp_dir }}"
     ext_test_bottom_result: {}
   tags: ["no_print"]
