--- a/tasks/dns/cloudflare.main.dns.yml
+++ b/tasks/dns/cloudflare.main.dns.yml
@@ -34,12 +34,13 @@
     ext_dns_record_type: "{{ ext_dns_params.dns_type }}"
     ext_dns_record: "{{ ext_dns_params.record }}"
     ext_dns_data_list: "{{ ext_dns_params.data_list }}"
-    ext_dns_main_credentials: >-
-      {{
-        inner_service_credentials[
-          inner_service_params.credential_name | default('dns', true)
-        ] | default({})
-      }}
+    ext_dns_main_credentials: "{{ ext_dns_credentials.dns | default({}) }}"
+    ext_dns_ttl: "{{ ext_dns_params.ttl | default('') }}"
+    ext_dns_priority: "{{ ext_dns_params.priority | default('') }}"
+    ext_dns_service: "{{ ext_dns_params.service | default('') }}"
+    ext_dns_protocol: "{{ ext_dns_params.protocol | default('') }}"
+    ext_dns_port: "{{ ext_dns_params.port | default('') }}"
+    ext_dns_weight: "{{ ext_dns_params.weight | default('') }}"
   tags: ["no_print"]
 
 - name: >-
@@ -48,6 +49,12 @@
   include_tasks: "cloudflare.record.dns.yml"
   vars:
     ext_dns_value: "{{ ext_dns_item.value }}"
+    ext_dns_inner_ttl: "{{ ext_dns_item.ttl | default('') }}"
+    ext_dns_inner_priority: "{{ ext_dns_item.priority | default('') }}"
+    ext_dns_inner_service: "{{ ext_dns_item.service | default('') }}"
+    ext_dns_inner_protocol: "{{ ext_dns_item.protocol | default('') }}"
+    ext_dns_inner_port: "{{ ext_dns_item.port | default('') }}"
+    ext_dns_inner_weight: "{{ ext_dns_item.weight | default('') }}"
     ext_dns_solo: "{{ ext_dns_index == 0 }}"
     ext_dns_final_state: "present"
   loop: "{{ ext_dns_data_list | default([]) | flatten(levels=1) }}"
