--- a/tasks/dns/godaddy.main.dns.yml
+++ b/tasks/dns/godaddy.main.dns.yml
@@ -34,12 +34,13 @@
     ext_dns_record_type: "{{ ext_dns_params.dns_type }}"
     ext_dns_record: "{{ ext_dns_params.record }}"
     ext_dns_data_list: "{{ ext_dns_params.data_list }}"
-    ext_dns_main_credentials: >-
-      {{
-        inner_service_credentials[
-          inner_service_params.credential_name | default('dns', true)
-        ] | default({})
-      }}
+    ext_dns_main_credentials: "{{ ext_dns_credentials.dns | default({}) }}"
+    ext_dns_ttl: "{{ ext_dns_params.ttl | default('') }}"
+    ext_dns_priority: "{{ ext_dns_params.priority | default('') }}"
+    ext_dns_service: "{{ ext_dns_params.service | default('') }}"
+    ext_dns_protocol: "{{ ext_dns_params.protocol | default('') }}"
+    ext_dns_port: "{{ ext_dns_params.port | default('') }}"
+    ext_dns_weight: "{{ ext_dns_params.weight | default('') }}"
   tags: ["no_print"]
 
 - name: "{{ ext_dns_title }} - godaddy dns"
