--- a/tasks/dns/godaddy.record.dns.yml
+++ b/tasks/dns/godaddy.record.dns.yml
@@ -4,12 +4,12 @@
       type: "{{ ext_dns_record_type }}"
       name: "{{ ext_dns_record }}"
       data: "{{ ext_dns_item.value | default('') }}"
-      ttl: "{{ ext_dns_item.ttl | default('') }}"
-      priority: "{{ ext_dns_item.priority | default('') }}"
-      service: "{{ ext_dns_item.service | default('') }}"
-      protocol: "{{ ext_dns_item.protocol | default('') }}"
-      port: "{{ ext_dns_item.port | default('') }}"
-      weight: "{{ ext_dns_item.weight | default('') }}"
+      ttl: "{{ ext_dns_ttl | default(ext_dns_item.ttl | default('', true), true) }}"
+      priority: "{{ ext_dns_priority | default(ext_dns_item.priority | default('', true), true) }}"
+      service: "{{ ext_dns_service | default(ext_dns_item.service | default('', true), true) }}"
+      proto: "{{ ext_dns_protocol | default(ext_dns_item.protocol | default('', true), true) }}"
+      port: "{{ ext_dns_port | default(ext_dns_item.port | default('', true), true) }}"
+      weight: "{{ ext_dns_weight | default(ext_dns_item.weight | default('', true), true) }}"
   tags: ["no_print"]
 
 - name: "{{ ext_dns_inner_title }} - empty record"
