--- a/tasks/dns/nsupdate.main.dns.yml
+++ b/tasks/dns/nsupdate.main.dns.yml
@@ -34,12 +34,11 @@
     ext_dns_record_type: "{{ ext_dns_params.dns_type }}"
     ext_dns_record: "{{ ext_dns_params.record }}"
     ext_dns_data_list: "{{ ext_dns_params.data_list }}"
-    ext_dns_main_credentials: >-
-      {{
-        inner_service_credentials[
-          inner_service_params.credential_name | default('dns', true)
-        ] | default({})
-      }}
+    ext_dns_main_credentials: "{{ inner_service_credentials.dns | default({}) }}"
+    ext_dns_ttl: "{{ ext_dns_params.ttl | default('') }}"
+    ext_dns_protocol: "{{ ext_dns_params.protocol | default('') }}"
+    ext_dns_port: "{{ ext_dns_params.port | default('') }}"
+    ext_dns_weight: "{{ ext_dns_params.weight | default('') }}"
   tags: ["no_print"]
 
 - name: >-
@@ -54,6 +53,11 @@
     type: "{{ ext_dns_record_type }}"
     record: "{{ ext_dns_record }}"
     value: "{{ ext_dns_data_list | default([]) | map(attribute='value') }}"
+    ttl: "{{ ext_dns_ttl | default(omit, true) }}"
+    service: "{{ ext_dns_service | default(omit, true) }}"
+    proto: "{{ ext_dns_protocol | default(omit, true) }}"
+    port: "{{ ext_dns_port | default(omit, true) }}"
+    weight: "{{ ext_dns_weight | default(omit, true) }}"
     state: "{{ ext_dns_state }}"
 
 # Set Result
