--- a/tasks/node/digital_ocean.main.node.yml
+++ b/tasks/node/digital_ocean.main.node.yml
@@ -31,12 +31,7 @@
 - name: "{{ ext_node_title }} - main vars"
   set_fact:
     ext_node_name: "{{ ext_node_params.name | replace('_', '-') }}"
-    ext_node_main_credentials: >-
-      {{
-        ext_node_credentials[
-          ext_node_params.credential_name | default('node', true)
-        ] | default({})
-      }}
+    ext_node_main_credentials: "{{ ext_node_credentials.node | default({}) }}"
     ext_node_instance_state: >-
       {{ ext_node_params.state | default(ext_node_state, true) }}
   tags: ["no_print"]
@@ -52,7 +47,7 @@
     region_id: "{{ ext_node_params.region_id }}"
     size_id: "{{ ext_node_params.size_id }}"
     image_id: "{{ ext_node_params.image_id }}"
-    wait_timeout: "{{ ext_node_params.wait_timeout }}"
+    wait_timeout: "{{ ext_node_params.wait_timeout | default(300, true) }}"
     private_networking: "true"
     ipv6: "{{ ext_node_params.ipv6 | default(omit, true) }}"
     user_data: "{{ ext_node_params.user_data | default(omit, true) }}"
