--- a/tasks/node/digital_ocean.credentials.schema.node.yml
+++ b/tasks/node/digital_ocean.credentials.schema.node.yml
@@ -3,7 +3,7 @@ schemas:
   credentials:
     type: "dict"
     props:
-      vpn:
+      node:
         schema: "digital_ocean_credentials"
         non_empty: true
   digital_ocean_credentials:
