[dev] docker task

--- a/run-tasks/docker.yml
+++ b/run-tasks/docker.yml
@@ -3,50 +3,32 @@
 - name: "{{ params.title }} - params"
   set_fact:
     task_params: "{{ tmp_params }}"
+    compose_params: "{{ tmp_params.compose | default({}) }}"
   vars:
-    tmp_params: "{{ params.task.params }}"
+    tmp_params: "{{ task_params }}"
   tags: ["no_print"]
+
+- name: "{{ params.title }} - copy the docker compose executable file"
+  become: "{{ params.task.root | default(false) }}"
+  get_url:
+    url: "{{ compose_params.src | default(tmp_default_url) }}"
+    dest: "{{ compose_params.dest | default('/usr/local/bin/docker-compose') }}"
+    mode: "{{ compose_params.mode | default(0755) }}"
+  vars:
+    tmp_default_url: >-
+      https://github.com/docker/compose/releases/download/{{
+        compose_params.version | default('')
+      }}/docker-compose-Linux-x86_64
+  when: >-
+    ((compose_params.src | default('')) != '')
+    or
+    ((compose_params.version | default('')) != '')
+  tags: ["no_print_skipped"]
 
 - name: "{{ params.title }} - ensure docker is running"
   become: "{{ params.task.root | default(false) }}"
   service:
     name: docker
     state: started
-  when: params.task.params.start_service | default(false) | bool
-  tags: ["no_print_skipped"]
-
-- name: "{{ params.title }} - copy the docker compose executable file"
-  become: "{{ params.task.root | default(false) }}"
-  template:
-    src: "{{ params.task.params.compose.src | default('roles/cloud_prepare/files/docker-compose.sh') }}"
-    dest: "{{ params.task.params.compose.dest | default('/usr/local/bin/docker-compose') }}"
-    mode: "{{ params.task.params.compose.mode | default(0755) }}"
-  vars:
-    params:
-      docker_compose_version: "{{ params.task.compose.version | default('') }}"
-  when: >-
-    ((params.task.compose.version | default('')) != '')
-    and
-    (params.task.compose.container | default(false) | bool)
-  tags: ["no_print_skipped"]
-
-- name: "{{ params.title }} - copy the docker compose executable file"
-  become: "{{ params.task.root | default(false) }}"
-  get_url:
-    url: "{{ params.task.params.src | default(default_url) }}"
-    dest: "{{ params.task.params.dest | default('/usr/local/bin/docker-compose') }}"
-    mode: "{{ params.task.params.mode | default(0755) }}"
-  vars:
-    default_url: >-
-      https://github.com/docker/compose/releases/download/{{
-        params.task.compose.version | default('')
-      }}/docker-compose-Linux-x86_64
-  when: >-
-    (
-      ((params.task.compose.src | default('')) != '')
-      or
-      ((params.task.compose.version | default('')) != '')
-    )
-    and
-    (params.task.compose.remote | default(false) | bool)
+  when: task_params.start_service | default(false) | bool
   tags: ["no_print_skipped"]
