--- a/tasks/node/digital_ocean.main.node.yml
+++ b/tasks/node/digital_ocean.main.node.yml
@@ -26,14 +26,7 @@
     ext_node_result: {}
   tags: ["no_print"]
 
-# Node State (Replica)
-
-- name: "{{ ext_node_title }} - ext_node_state"
-  set_fact:
-    ext_node_state: "{{ ext_node_params.state | default(ext_node_state, true) }}"
-  tags: ["no_print"]
-
-# Main
+# Node Main Vars (Replica)
 
 - name: "{{ ext_node_title }} - main vars"
   set_fact:
@@ -42,6 +35,8 @@
     ext_node_instance_state: >-
       {{ ext_node_params.state | default(ext_node_state, true) }}
   tags: ["no_print"]
+
+# Main
 
 - name: >-
     {{ ext_node_title }} - {{ ext_node_instance_state }}
