--- a/tasks/node/digital_ocean.main.node.yml
+++ b/tasks/node/digital_ocean.main.node.yml
@@ -34,9 +34,23 @@
     ext_node_main_credentials: "{{ ext_node_credentials.node | default({}) }}"
     ext_node_instance_state: >-
       {{ ext_node_params.state | default(ext_node_state, true) }}
+    ext_node_user_data: ""
   tags: ["no_print"]
 
 # Main
+
+- name: "{{ ext_node_title }} - get the node user data"
+  set_fact:
+    ext_node_user_data: >-
+      {{
+        lookup(
+          'lrd.cloud.content',
+          ext_node_params.user_data | default(''),
+          env_data=env_data,
+        )
+      }}
+  when: ext_node_params.user_data is defined
+  tags: ["no_print_skipped"]
 
 - name: >-
     {{ ext_node_title }} - {{ ext_node_instance_state }}
@@ -52,7 +66,7 @@
     wait_timeout: "{{ ext_node_params.wait_timeout | default(300, true) }}"
     private_networking: "true"
     ipv6: "{{ ext_node_params.ipv6 | default(omit, true) }}"
-    user_data: "{{ ext_node_params.user_data | default(omit, true) }}"
+    user_data: "{{ ext_node_user_data | default(omit, true) }}"
   register: ext_node_details
   tags: ["no_print_skipped"]
 
